--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,25 @@
-version: '3.3'
+version: '3'
 services:
-  db:
-    image: mysql:8.0.31
-    volumes:
-      - db_data:/var/run/mysqld
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: somewordpress
-      MYSQL_DATABASE: wordpress
-      MYSQL_USER: wordpress
-      MYSQL_PASSWORD: wordpress
-
-  wordpress:
-    depends_on:
-      - db
-    image: wordpress:php7.4-apache
+  joomla:
+    image: joomla
+    container_name: joomla
     ports:
-      - "8000:80"
-    restart: always
+      - 8080:80
     environment:
-      WORDPRESS_DB_HOST: db:3306
-      WORDPRESS_DB_USER: wordpress
-      WORDPRESS_DB_PASSWORD: wordpress
-      WORDPRESS_DB_NAME: wordpress
-    volumes:
-      - db_data:/var/www/html
+      - JOOMLA_DB_HOST=mariadb
+      - JOOMLA_DB_USER=db_username
+      - JOOMLA_DB_PASSWORD=db_password
+      - JOOMLA_DB_NAME=db_name
+    depends_on:
+      - mariadb
+    restart: always
 
-volumes:
-  db_data: {}
+  mariadb:
+    image: mariadb
+    container_name: mariadb
+    environment:
+      - MYSQL_ROOT_PASSWORD=root_password
+      - MYSQL_DATABASE=db_name
+      - MYSQL_USER=db_username
+      - MYSQL_PASSWORD=db_password
+    restart: always
